--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# PAGINACAO
+paginacao.qtd_por_pagina=25
+
+# Ehcache
+spring.cache.jcache.config=classpath:ehcache.xml
